<resources>
    <string name="app_name">CarPooling</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter_avec">Se connecter avec</string>
    <string name="je_n_ai_pas_de_compte_s_inscrire">Je n\'ai pas de compte ? S\'inscrire</string>
    <string name="inscription_text">Inscrivez-vous</string>
    <string name="confirmation_password">Confirmez le mot de passe</string>
    <string name="sinscrire_avec">S\'inscrire avec</string>
    <string name="valider">valider</string>
    <string name="deja_compte_connexion">Vous avez deja un compte ? Connectez-vous</string>
    <string name="reservation">reservation</string>
    <string name="profil">Profil</string>
    <string name="recherche">Recherche</string>
    <string name="accueil">Accueil</string>
    <string name="rechercher_un_endroit">Entrez votre destination</string>
    <string name="element_recherche">Element</string>
    <string name="destination">Destination</string>
    <string name="distance">Distance</string>
    <string name="notifications">Hotifications</string>
    <string name="historique">Historique</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="empty_array" />
    <string name="client_id">106108027983-n47gfo8qku7m5uf0809d2lc3po6jg1qt.apps.googleusercontent.com</string>
    <string name="firebase_api_key">AIzaSyD4vP9_AIG2MeVZQkEJt4BCz5ynJSx1cSY</string>
    <string name="username">Nom d\'utilisateur</string>
</resources>