<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".features.authentification.ui.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/google_icon" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:fontFamily="@font/gotham_bold"
        android:textSize="35sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <!-- Formulaire -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="9dp"
                android:src="@drawable/email_icon" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/email"
                android:fontFamily="@font/gotham_book"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:background="@drawable/edit_text_custom"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="9dp"
                android:src="@drawable/password_icon" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/mot_de_passe"
                android:fontFamily="@font/gotham_book"
                android:inputType="textPassword"
                android:background="@drawable/edit_text_custom"
                android:paddingStart="8dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/mainColor"
        android:text="@string/se_connecter"
        android:fontFamily="@font/gotham_medium"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe_oubli"
        android:fontFamily="@font/gotham_book"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:background="@color/mainColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se_connecter_avec"
            android:fontFamily="@font/gotham_medium"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:background="@color/mainColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/socialLoginButton"
        android:layout_width="167dp"
        android:layout_height="66dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_with_google"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/socialButtonImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/google_icon" />

        <TextView
            android:id="@+id/socialButtonText"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/gotham_bold"
            android:text="Google"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/je_n_ai_pas_de_compte_s_inscrire"
        android:fontFamily="@font/gotham_medium"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>
